sequence types can now be selected with keyboard shortcuts
The first letter is used for each type:

    Type                   | Shortcut key
    -----------------------|-------------
    Lowercase alphabetical | l
    Uppercase alphabetical | u
    Numerical characters   | n
    Special characters     | s

--- a/main.css
+++ b/main.css
@@ -109,6 +109,12 @@ input#sequence-length {
     max-width: 100px;
 }
 
+/* Placeholder element to focus on page load so that keyboard shortcuts
+can be used. */
+#focus-placeholder:focus {
+    outline: none;
+}
+
 
 
 /*
