--- a/rasputin.css
+++ b/rasputin.css
@@ -188,7 +188,7 @@ Other
 ------------------------------------------------------------------------
 */
 
-.sts-wrap {
+.nts-wrap {
     display: inline-block;
     margin: 0 1rem 0.5rem 0;
     --canal-height: 13px;
